# indu_v2_1_2

./: .gitignore  Dockerfile  Dockerfile.shakal  INSTALL.sh  PROJECT_MEMORY.md  README.md  README_DEPLOYMENT.md  README_v2_tanay_working.md  config.json  docker-compose.yml  intent_reasoner.py  naamika_knowledge_base.txt  naamika_rag.py  naamika_system_prompt.txt  requirements.txt  server.py  setup.py  slam_client.py  start.sh  stop_fast_path.py  test_100_questions.py  v2_1_3_0.md  v2_1_4_0.md  voice_bridge.py
brain_v2/: README_DEPLOYMENT.md  action_registry.py  backup_and_push.sh  chatterbox_tts_client.py  config.json  config.json.example  indu_knowledge_base.txt  indu_rag.py  indu_system_prompt.txt  server.py  setup.py  stop_fast_path.py  whisper_server.py
brain_v2/templates/: config.html  stream.html
brain_v2/vad_pipeline/: __init__.py  audio_input.py  audio_player.py  audio_recorder.py  vad_processor.py
brain_v2/vad_pipeline/tools/: AEC_IMPLEMENTATION.md  VAD_INTEGRATION_SUMMARY.md  VAD_PIPELINE_README.md  VAD_TECHNICAL_DEEP_DIVE.md  analyze_recordings.py  record_test_samples_auto.py  record_with_control.py  requirements_vad.txt  test_calibration_file.py  test_interrupts.py  test_webrtc_aec.py
chatterbox_tts/: tts_server.py
config/: external_services.yaml  orchestrator_config.yaml
docker_build/install/: local_setup.sh  setup.sh
docker_build/install/g1_orchestrator/share/g1_orchestrator/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  (+1 more)
docs/: V2_demo_doc.md
external_servers/slam_control/: CMakeLists.txt  slam_control.cpp  slam_http_server.py
g1_deployed_v2_1_7/: docker-compose.yml
g1_deployed_v2_1_7/config/: external_services.yaml
g1_deployed_v2_1_7/maps/: map_registry.json  waypoints.json
g1_deployed_v2_1_7/src/action_gatekeeper/src/: action_gatekeeper_node.cpp
g1_deployed_v2_1_7/src/audio_player/scripts/: announcer_utils.py  audio_receiver.py.bak.namaste  talking_gestures.py  talking_gestures.py.bak.namaste
g1_deployed_v2_1_7/src/audio_player/src/: tts_audio_player.cpp
g1_deployed_v2_1_7/src/g1_orchestrator/src/: g1_orchestrator_node.cpp  g1_orchestrator_node.cpp.bak  g1_orchestrator_node.cpp.bak.20260121
g1_deployed_v2_1_7/src/gatekeeper_msgs/: CMakeLists.txt
g1_deployed_v2_1_7/src/gatekeeper_msgs/msg/: GatekeeperResponse.msg
g1_deployed_v2_1_7/src/http_action_bridge/: setup.cfg  setup.py
g1_deployed_v2_1_7/src/http_action_bridge/http_action_bridge/: bridge_node.py
g1_deployed_v2_1_7/src/orchestrator_msgs/: package.xml
g1_deployed_v2_1_7/src/orchestrator_msgs/msg/: ActionCommand.msg
g1_deployed_v2_1_7/src/shakal_ros/src/: face_recognition_node.cpp
g1_deployed_v2_1_7/src/shakal_ros/srv/: Remove.srv  SetFov.srv
g1_deployed_v2_1_7/src/unitree_go/: CMakeLists.txt
g1_docker/: Dockerfile  docker-compose.yml
g1_docker/config/: external_services.yaml
g1_docker/docker_scripts/: entrypoint.sh
g1_docker/src/arm_controller/: package.xml
g1_docker/src/arm_controller/src/: arm_controller_node.cpp
g1_docker/src/audio_player/: CMakeLists.txt
g1_docker/src/audio_player/scripts/: announcer_utils.py  audio_receiver.py  startup_health_check.py  status_announcer.py
g1_docker/src/g1_orchestrator/: CMakeLists.txt
g1_docker/src/g1_orchestrator/src/: g1_orchestrator_node.cpp
g1_docker/src/gatekeeper_msgs/: package.xml
g1_docker/src/http_action_bridge/http_action_bridge/: bridge_node.py
g1_docker/src/orchestrator_msgs/: CMakeLists.txt
g1_docker/src/shakal_ros/config/: shakal_params.yaml
g1_docker/src/shakal_ros/launch/: full.launch.py
g1_docker/src/shakal_ros/msg/: Face.msg
g1_docker/src/shakal_ros/src/: enroll_standalone.cpp
g1_docker/src/shakal_ros/srv/: Enroll.srv  ListPersons.srv  SetZoom.srv
models/: anti_spoof.onnx
naamika_vectorstore/: index.faiss  index.pkl
scripts/: g1_services.sh  launch_version.sh
slam_backup/: waypoints.json
src/action_gatekeeper/: CMakeLists.txt  package.xml
src/action_gatekeeper/include/action_gatekeeper/: action_gatekeeper_node.hpp
src/arm_controller/: CMakeLists.txt
src/arm_controller/src/: arm_controller_node.cpp.backup_pre_safety  motor_crc_hg.cpp
src/audio_player/: package.xml
src/audio_player/scripts/: audio_receiver.py  check_tts_ready.sh  startup_health_check.py  talking_gestures.py
src/audio_player/src/: tts_audio_player.cpp
src/g1_orchestrator/: package.xml
src/g1_orchestrator/include/common/: base_client.hpp
src/g1_orchestrator/include/g1/: g1_loco_client.hpp
src/g1_orchestrator/src/: g1_orchestrator_node.cpp
src/gatekeeper_msgs/msg/: VoiceActionRequest.msg
src/http_action_bridge/: package.xml
src/shakal/: .gitignore  CMakeLists.txt  EXECUTE.md  README.md
src/shakal/config/: config.yaml
src/shakal/scripts/: convert_to_tensorrt.py
src/shakal/src/: enroll.cpp  main.cpp
src/shakal/src/core/: FaceEncoder.cpp  FaceEncoder.hpp
src/shakal/src/gpu/: CudaUtils.cpp
src/shakal/src/pipeline/: Pipeline.cpp  Pipeline.hpp
src/shakal/src/utils/: Logger.cpp
src/shakal/tests/: test_recognition.cpp
src/shakal/tools/: obsbot_config.cpp
src/shakal_bridge/: shakal_bridge.py
src/shakal_ros/: CMakeLists.txt  package.xml
src/shakal_ros/launch/: shakal.launch.py
src/shakal_ros/lib/core/: AntiSpoof.cpp  AntiSpoof.hpp  FaceDatabase.hpp  FaceDetector.cpp  FaceDetector.cpp.rawdnn.bak  FaceDetector.hpp.rawdnn.bak
src/shakal_ros/lib/gpu/: CudaUtils.hpp
src/shakal_ros/lib/inference/: OpenCVBackend.cpp  TensorRTEngine.cpp
src/shakal_ros/lib/utils/: Logger.hpp
src/shakal_ros/msg/: FaceArray.msg
src/shakal_ros/src/: enrollment_service.cpp  obsbot_service.cpp
src/unitree_api/: CMakeLists.txt
src/unitree_hg/: CMakeLists.txt
templates/: stream.html
vad_pipeline/: INSTALL_AEC.sh  config.py  pipeline_manager.py
vad_pipeline/tools/: INTERRUPT_DETECTION.md  RECORDING_TEST_GUIDE.md  STACK_INFO.md  VERBOSE_LOGGING_GUIDE.md  WEBRTC_AEC_IMPLEMENTATION.md  record_step1_tts_only.py  record_step2_tts_human.py  record_test_samples.py  run.sh  simple_mic_test.py  test_aec.py  test_microphone.py  vad_main.py
(+20 files in other folders)
