<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_gatekeeper</name>
  <version>1.0.0</version>
  <description>
    G1 Robot Action Gatekeeper - Voice commands ka validation layer
    Safety checks: whitelist, FSM compatibility, semantic veto, confidence threshold
    Time-based locomotion with hardcoded durations
  </description>
  <maintainer email="tanay@example.com">Tanay</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gatekeeper_msgs</depend>
  <depend>orchestrator_msgs</depend>
  <depend>unitree_api</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
