<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_orchestrator</name>
  <version>1.0.0</version>
  <description>G1 Robot Orchestrator - Central control node</description>
  <maintainer email="ssi@example.com">SSI</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>orchestrator_msgs</depend>
  <depend>unitree_go</depend>
  <depend>unitree_hg</depend>
  <depend>unitree_api</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
